--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,72 @@
 body {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: sans-serif;
+  background-color: #4d4d4d;
+}
+
+form {
+  text-align: center;
+}
+
+h3 {
+  font-size: 26px;
+  color: #f8df00;
+  text-shadow: 0px 0px 10px #000000;
+  text-align: center;
+
+  flex-grow: 1;
+}
+
+.main-form__label {
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  font-weight: bold;
+  font-style: oblique;
+  margin: 10px 0 20px;
+  display: block;
+  transition: all 0.3s;
+  transform: translateY(0rem);
+}
+
+.main-form__input {
+  font-family: 'Roboto', sans-serif;
+  color: #333;
+  font-size: 1.2rem;
+	margin: 0 auto;
+  padding: 1.5rem 2rem;
+  border-radius: 0.2rem;
+  background-color: rgb(255, 255, 255);
+  border: none;
+  width: 40%;
+  display: block;
+  border-bottom: 0.3rem solid transparent;
+  transition: all 0.3s;
+  text-align: center;
+}
+
+.main-form__input:placeholder-shown + .main-form__label {
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transform: translateY(-4rem);
+  transform: translateY(-4rem);
+  margin: 0
+}
+
+.button {
+  background-color: #4CAF50; /* Green */
+  border: 2px solid white;
+  border-radius: 5%;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  transition: border-width 0.2s linear;
+}
+
+.button:hover {
+  border-width: 4px;
 }
